caravel/static/style.css
* {
  margin: 0;
  padding: 0;
}

html,
body {
  height: 100%;
}

#vertical {
    padding: 5px;
}

#wrap {
  min-height: 100%;
  padding: 20px;
}

#main {
  overflow: auto;
  padding-bottom: 40px;
  /* must be same height as the footer */
}

#footer {
  position: relative;
  margin-top: -40px;
  /* negative value of footer height */
  height: 40px;
  padding-top: 5px;
  padding-left: 10px;
}

.divider-15 {
  /* adds spacing 15px */
  width:90%; 
  min-height:1px; 
  margin-top:15px; 
  margin-bottom:15px;
  margin-left:15px;  
  display:inline-block; 
  position:relative;
}
.divider-vertical {
  margin-top:15px;
  margin-bottom:15px;
}

th {
  font-size:12px;
  padding: 3px;
  font-weight: bold;
  text-align: center;
  background-color: #464c56;
  color: white


}

td {
  font-size:12px;
  padding: 3px;
  text-align: center;
  color: #464c56;
  font-weight: bold;
  font-family: Courier New
}

code.footer {
  color:#464c56
}

.left {
  float:left;
  padding-left: 10px;
  padding-bottom: 10px;
}

.right {
  float:right;
  padding-top: 15px;
  padding-right: 10px;
}

input[type="range"] { 
  float: left;
  width: 70%;
}

span {
  margin-left: 5px;
}

.col-auto#label {
  padding-left: 0px;
}

label.col-form-label {
  padding-bottom: 0px;
  padding-top: 0px;
}

pre.form {
  margin-bottom: 0px;
  margin-top: 0px;
}

button.disp-value {
  font-weight: bold; 
  font-size: 12px; 
  border-radius: 5px; 
  margin-left: 10px; 
  color: white; 
  padding: 1px; 
  background-color: #007bff; 
  width: 50px; 
  opacity: 1;
  border: none;
}

